2011-10-25  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (..run): Switch to 
	use Process.
	(ExecuteProgressDialog.run): Ditto.

2011-10-14  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/ui/editors/IAutotoolsEditor.java (getAdaptor): Remove since
	it is already part of interfaces extended.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java: Rewrite file
	accesses to not use getLocation() and instead use getLocationURI() since the former returns
	null for remote files.

2011-10-07  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Add org.eclipse.linuxtools.profiling.launch as dependency.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/OpenIncludeAction.java (findFile): Update to
	use new IRemoteFileProxy interface.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (ExecuteProgressDialog.run): Update
	to use new IRemoteCommandLauncher interface.

2011-09-08  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/Target.java: Remote exits and
	lastModified methods.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/OpenIncludeAction.java (findFile): Use remote
	file proxy.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/EditorUtility.java (openInEditor): Comment out
	file manipulation using paths.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (ExecuteProgressDialog.run): 
	Use RemoteProxyManager to run command.

2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/ui/editors/parser/IAutoconfMacroValidator.java (validateMacroCall): Add
	InvalidMacroException as possible throws.
	* src/org/eclipse/linuxtools/cdt/autotools/ui/editors/parser/AutoconfParser.java (parse): Remove